// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SkipLink > should match snapshot - default 1`] = `
<a
  aria-label="Skip to main content"
  class="sr-only focus:not-sr-only focus:absolute focus:top-4 focus:left-4 bg-pairup-cyan text-pairup-darkBlue px-4 py-2 rounded-md font-medium z-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pairup-cyan transition-all "
  href="#main-content"
  tabindex="1"
>
  Skip to main content
</a>
`;

exports[`SkipLink > should match snapshot - with custom className 1`] = `
<a
  aria-label="Skip to main content"
  class="sr-only focus:not-sr-only focus:absolute focus:top-4 focus:left-4 bg-pairup-cyan text-pairup-darkBlue px-4 py-2 rounded-md font-medium z-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pairup-cyan transition-all custom-class"
  href="#main-content"
  tabindex="1"
>
  Skip to main content
</a>
`;

exports[`SkipLink > should match snapshot - with custom label 1`] = `
<a
  aria-label="Skip to content"
  class="sr-only focus:not-sr-only focus:absolute focus:top-4 focus:left-4 bg-pairup-cyan text-pairup-darkBlue px-4 py-2 rounded-md font-medium z-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pairup-cyan transition-all "
  href="#main-content"
  tabindex="1"
>
  Skip to content
</a>
`;
